# segy_reader

./: .gitmodules  CMakeLists.txt
MS_Win/: iline.plt  segy_reader.sln  segy_reader.vcxproj  segy_reader.vcxproj.filters  seismo_reader.sln  seismo_reader.vcxproj  seismo_reader.vcxproj.filters
src/: base.cpp  base.h  common.h  data_conversion.cpp  data_conversion.h  data_types.cpp  data_types.h  obj_base.h  py_mudule.cpp  segy_bin_header.cpp  segy_bin_header.h  segy_defines.h  segy_file.cpp  segy_file.h  segy_header_info.cpp  segy_header_info.h  segy_header_map.cpp  segy_header_map.h  segy_reader.cpp  segy_reader.h  segy_smart_trc_buffer.cpp  segy_smart_trc_buffer.h  segy_text_header.cpp  segy_text_header.h  segy_trace.cpp  segy_trace.h  segy_trace_header.cpp  segy_trace_header.h  segy_writer.cpp  segy_writer.h  seismic_abstract_header.h  seismic_cube.h  seismic_data_provider.h  seismic_exception.h  seismic_geometry.h  seismic_header_field.h  seismic_header_map.h  seismic_trace.h  seismic_trace_header.h  test.cpp  (+2 more)
test/: test.py
tutorial/: 2D.segy  segy_bin_header.ipynb  segy_header_map.ipynb  segy_text_header.ipynb  segy_writer.ipynb
whl/: whl_local_compose.py  whl_upload_geostation.py
whl/seismo_reader/: __init__.py
